<resources>
    <string name="app_name">MyGallery</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="multi_select">MultiSelect</string>
    <string name="search_advance">Advanced Search</string>
    <string name="settings">Settings</string>
    <string name="duplicate_images">Duplicated Images</string>
    <string name="share">Share</string>
    <string name="edit_photo">Edit photo</string>
    <string name="add_to_favorite">Favorite Picture</string>
    <string name="delete">Delete</string>
    <string name="photo">Photo</string>
    <string name="album">Album</string>
    <string name="secret">Secret</string>
    <string name="favorite">Favorite</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_activated"> Night mode is activated</string>
    <string name="night_mode_deactivated"> Night mode is deactivated</string>
    <string name="languague">Language</string>
    <string name="language_summary" translatable="false">Select your language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="slideshow">Slide show</string>
    <string name="add">Add</string>
    <string name="anti_clockspin_transformation">Anti Clockspin transformation</string>
    <string name="zoom_out_transformation">Zoom out transformation</string>
    <string name="depth_transformation">Depth transformation</string>
    <string name="create_password">Create password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="question_for_getting_back_password">"Queston "</string>
    <string name="write_your_question">Write your question</string>
    <string name="your_answer_for_the_question_above">Answer</string>
    <string name="create">Create Album Secret</string>
    <string name="enter">Enter</string>
    <string name="information">Information picture</string>
    <string name="addAlbum">Add Album</string>
    <string name="hide_photo">Hide picture</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="search_results">Search</string>
    <string name="to_album">To Album</string>
    <string name="change_password">Change password</string>
    <string name="forgot_password">forgot password</string>
    <string name="delete_secret_album">Delete secret</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
</resources>